--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -19,7 +19,7 @@ h4 { font-size: 1.4em; text-transform:uppercase; }
 h1, h3 { border-bottom: 1px solid @black; text-align: left; }
 
 .pacifico { font-family: 'Pacifico', cursive; line-height: 170%; padding-right: 4px; }
-.highlight { .pacifico; line-height: 100%; }
+.highlight { .pacifico; line-height: 50%; }
 
 /* COMMON */
 
