--- a/app/assets/stylesheets/responsive.less
+++ b/app/assets/stylesheets/responsive.less
@@ -2,14 +2,9 @@
 @import "demo/mixins";
 
 /* RESPONSIVE */
-@media (max-height: 920px) {
-    #product-header {
-        #image-header { max-width: 80%; }
-    }
-}
 
 /* Tablet landscape */
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px), screen and (max-height: 940px) {
     h1 { font-size: 2.9em; }
     h2 { font-size: 2.8em; }
     h3 { font-size: 1.2em; }
@@ -25,7 +20,7 @@
     }
 
     body.product {
-        #container section > .space > .inner {
+        section > .space > .inner {
             &> .head, &> .body { width: 768px; }
         }
 
@@ -53,7 +48,7 @@
             }
         }
 
-        #product-often {
+        #product-often .inner {
             .often-box {
                 display: block; padding-left: 34%;
                 label {
